Bug 1128237 - fix dialogs on small screen sizes, r=jaws
UltraBlame original commit: 1900ac4cdf15ef9f8ff6bdb9105033c851d7aad1

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -1557,6 +1557,27 @@ width
 66ch
 ;
 }
+.
+largeDialogContainer
+.
+doScroll
+{
+overflow
+-
+y
+:
+auto
+;
+-
+moz
+-
+box
+-
+flex
+:
+1
+;
+}
 #
 sync
 -
